[package]
name = "stage_1st"
version = "0.1.0"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plankton = { path = "../plankton" }
rlibc = "1.0.0"

[profile.release]
opt-level = "z"
